testcases/negative/inspect-mixed-operations.otk
OFFICETALK/1.0
DOCTYPE word

INSPECT body/heading
  INCLUDE content

AT body/paragraph[1]
SET "Hello"
